--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,458 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:weightSum="10"
-
-    tools:context=".MainActivity">
-
-  <TextView
-    android:id="@+id/tvsec"
-    android:layout_width="match_parent"
-    android:layout_height="0dp"
-    android:background="#000"
-    android:text=""
-    android:textColor="#f6f6f6"
-    android:textSize="30sp"
-    android:textAlignment="viewEnd"
-    android:padding="10dp"
-    android:gravity="bottom"
-    android:maxLines="1"
-    android:layout_weight="1"></TextView>
-  <TextView
-    android:id="@+id/tvmain"
-    android:layout_width="match_parent"
-    android:layout_height="0dp"
-    android:background="#000"
-    android:text=""
-    android:textColor="#fff"
-    android:textSize="50sp"
-    android:textAlignment="viewEnd"
-    android:padding="10dp"
-    android:gravity="bottom"
-    android:maxLines="1"
-    android:layout_weight="2"></TextView>
-
-<LinearLayout
-    android:orientation="vertical"
-    android:background="@color/black"
-    android:layout_width="match_parent"
-    android:layout_height="0dp"
-    android:layout_weight="7"
->
-<LinearLayout
-    android:weightSum="7"
-    android:background="@color/black"
-    android:orientation="vertical"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    >
-<LinearLayout
-    android:layout_weight="1"
-    android:orientation="horizontal"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
-<LinearLayout
-    android:orientation="horizontal"
-    android:weightSum="4"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
-<Button style="@style/Widget.Material3.Button.ElevatedButton"
-    android:id="@+id/bac"
-    android:text="AC"
-    android:textSize="25sp"
-    app:backgroundTint="#444"
-    android:textColor="#ffa500"
-    android:layout_weight="1"
- android:layout_width="wrap_content"
- android:layout_height="wrap_content">
-</Button>
-
-<Button style="@style/Widget.Material3.Button.ElevatedButton"
-    android:id="@+id/bb1"
-    android:text="("
-    android:textSize="25sp"
-    app:backgroundTint="@color/black"
-    android:textColor="#ffa500"
-    android:layout_weight="1"
- android:layout_width="wrap_content"
- android:layout_height="wrap_content">
-</Button>
-<Button style="@style/Widget.Material3.Button.ElevatedButton"
-    android:id="@+id/bb2"
-    android:text=")"
-    android:textSize="25sp"
-    app:backgroundTint="@color/black"
-    android:textColor="#ffa500"
-    android:layout_weight="1"
- android:layout_width="wrap_content"
- android:layout_height="wrap_content">
-</Button>
-<Button style="@style/Widget.Material3.Button.ElevatedButton"
-    android:id="@+id/bc"
-    android:text="⌫"
-    android:textSize="25sp"
-    app:backgroundTint="#444"
-    android:textColor="#ffa500"
-    android:layout_weight="1"
- android:layout_width="wrap_content"
- android:layout_height="wrap_content">
-</Button>
-</LinearLayout>
-
-</LinearLayout>
-<LinearLayout
-    android:layout_weight="1"
-    android:orientation="horizontal"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
-<LinearLayout
-    android:orientation="horizontal"
-    android:weightSum="5"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
-<Button style="@style/Widget.Material3.Button.ElevatedButton"
-    android:id="@+id/bsin"
-    android:text="sin"
-    android:textAllCaps="false"
-    android:textSize="18sp"
-    app:backgroundTint="@color/black"
-    android:textColor="#ffa500"
-    android:layout_weight="1"
- android:layout_width="wrap_content"
- android:layout_height="wrap_content">
-</Button>
-<Button style="@style/Widget.Material3.Button.ElevatedButton"
-    android:id="@+id/bcos"
-    android:text="cos"
-    android:textAllCaps="false"
-    android:textSize="18sp"
-    app:backgroundTint="@color/black"
-    android:textColor="#ffa500"
-    android:layout_weight="1"
- android:layout_width="wrap_content"
- android:layout_height="wrap_content">
-</Button>
-<Button style="@style/Widget.Material3.Button.ElevatedButton"
-    android:id="@+id/btan"
-    android:text="tan"
-    android:textAllCaps="false"
-    android:textSize="18sp"
-    app:backgroundTint="@color/black"
-    android:textColor="#ffa500"
-    android:layout_weight="1"
- android:layout_width="wrap_content"
- android:layout_height="wrap_content">
-</Button>
-<Button style="@style/Widget.Material3.Button.ElevatedButton"
-    android:id="@+id/blog"
-    android:text="log"
-    android:textAllCaps="false"
-    android:textSize="18sp"
-    app:backgroundTint="@color/black"
-    android:textColor="#ffa500"
-    android:layout_weight="1"
- android:layout_width="wrap_content"
- android:layout_height="wrap_content">
-</Button>
-<Button style="@style/Widget.Material3.Button.ElevatedButton"
-    android:id="@+id/bln"
-    android:text="ln"
-    android:textAllCaps="false"
-    android:textSize="18sp"
-    app:backgroundTint="@color/black"
-    android:textColor="#ffa500"
-    android:layout_weight="1"
- android:layout_width="wrap_content"
- android:layout_height="wrap_content">
-</Button>
-</LinearLayout>
-
-</LinearLayout>
-<LinearLayout
-    android:layout_weight="1"
-    android:orientation="horizontal"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
-<LinearLayout
-    android:orientation="horizontal"
-    android:weightSum="5"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
-
-<Button style="@style/Widget.Material3.Button.ElevatedButton"
-    android:id="@+id/bfact"
-    android:text="x!"
-    android:textAllCaps="false"
-    android:textSize="17sp"
-    app:backgroundTint="@color/black"
-    android:textColor="#ffa500"
-    android:layout_weight="1"
- android:layout_width="wrap_content"
- android:layout_height="wrap_content">
-</Button>
-<Button style="@style/Widget.Material3.Button.ElevatedButton"
-    android:id="@+id/bsquare"
-    android:text="x²"
-    android:textAllCaps="false"
-    android:textSize="17sp"
-    app:backgroundTint="@color/black"
-    android:textColor="#ffa500"
-    android:layout_weight="1"
- android:layout_width="wrap_content"
- android:layout_height="wrap_content">
-</Button>
-<Button style="@style/Widget.Material3.Button.ElevatedButton"
-    android:id="@+id/bsqrt"
-    android:text="√"
-    android:textAllCaps="false"
-    android:textSize="17sp"
-    app:backgroundTint="@color/black"
-    android:textColor="#ffa500"
-    android:layout_weight="1"
- android:layout_width="wrap_content"
- android:layout_height="wrap_content">
-</Button>
-<Button style="@style/Widget.Material3.Button.ElevatedButton"
-    android:id="@+id/binv"
-    android:text="1/x"
-    android:textAllCaps="false"
-    android:textSize="17sp"
-    app:backgroundTint="@color/black"
-    android:textColor="#ffa500"
-    android:layout_weight="1"
- android:layout_width="wrap_content"
- android:layout_height="wrap_content">
-</Button>
-<Button style="@style/Widget.Material3.Button.ElevatedButton"
-    android:id="@+id/bdiv"
-    android:text="÷"
-    android:textSize="30sp"
-    app:backgroundTint="@color/black"
-    android:textColor="#ffa500"
-    android:layout_weight="1"
- android:layout_width="wrap_content"
- android:layout_height="wrap_content">
-</Button>
-</LinearLayout>
-
-</LinearLayout>
-<LinearLayout
-    android:layout_weight="1"
-    android:orientation="horizontal"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
-<LinearLayout
-    android:orientation="horizontal"
-    android:weightSum="4"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
-<Button style="@style/Widget.Material3.Button.ElevatedButton"
-    android:id="@+id/b7"
-    android:text="7"
-    app:backgroundTint="@color/black"
-    android:textSize="30sp"
-    android:textColor="#fff"
-    android:layout_weight="1"
- android:layout_width="wrap_content"
- android:layout_height="wrap_content">
-</Button>
-<Button style="@style/Widget.Material3.Button.ElevatedButton"
-    android:id="@+id/b8"
-    android:text="8"
-    app:backgroundTint="@color/black"
-    android:textSize="30sp"
-    android:textColor="#fff"
-    android:layout_weight="1"
- android:layout_width="wrap_content"
- android:layout_height="wrap_content">
-</Button>
-<Button style="@style/Widget.Material3.Button.ElevatedButton"
-    android:id="@+id/b9"
-    android:text="9"
-    android:textSize="30sp"
-    app:backgroundTint="@color/black"
-    android:textColor="#fff"
-    android:layout_weight="1"
- android:layout_width="wrap_content"
- android:layout_height="wrap_content">
-</Button>
-<Button style="@style/Widget.Material3.Button.ElevatedButton"
-    android:id="@+id/bmul"
-    android:text="×"
-    android:textSize="25sp"
-    app:backgroundTint="@color/black"
-    android:textColor="#ffa500"
-    android:layout_weight="1"
- android:layout_width="wrap_content"
- android:layout_height="wrap_content">
-</Button>
-</LinearLayout>
-
-</LinearLayout>
-<LinearLayout
-    android:layout_weight="1"
-    android:orientation="horizontal"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
-<LinearLayout
-    android:orientation="horizontal"
-    android:weightSum="4"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
-
-<Button style="@style/Widget.Material3.Button.ElevatedButton"
-    android:id="@+id/b4"
-    android:text="4"
-    android:textSize="30sp"
-    app:backgroundTint="@color/black"
-    android:textColor="#fff"
-    android:layout_weight="1"
- android:layout_width="wrap_content"
- android:layout_height="wrap_content">
-</Button>
-<Button style="@style/Widget.Material3.Button.ElevatedButton"
-    android:id="@+id/b5"
-    android:text="5"
-    android:textSize="30sp"
-    app:backgroundTint="@color/black"
-    android:textColor="#fff"
-    android:layout_weight="1"
- android:layout_width="wrap_content"
- android:layout_height="wrap_content">
-</Button>
-<Button style="@style/Widget.Material3.Button.ElevatedButton"
-    android:id="@+id/b6"
-    android:text="6"
-    android:textSize="30sp"
-    app:backgroundTint="@color/black"
-    android:textColor="#fff"
-    android:layout_weight="1"
- android:layout_width="wrap_content"
- android:layout_height="wrap_content">
-</Button>
-<Button style="@style/Widget.Material3.Button.ElevatedButton"
-    android:id="@+id/bmin"
-    android:text="-"
-    android:textSize="25sp"
-    app:backgroundTint="@color/black"
-    android:textColor="#ffa500"
-    android:layout_weight="1"
- android:layout_width="wrap_content"
- android:layout_height="wrap_content">
-</Button>
-</LinearLayout>
-
-</LinearLayout>
-<LinearLayout
-    android:layout_weight="1"
-    android:orientation="horizontal"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
-<LinearLayout
-    android:orientation="horizontal"
-    android:weightSum="4"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
-<Button style="@style/Widget.Material3.Button.ElevatedButton"
-    android:id="@+id/b1"
-    android:text="1"
-    android:textSize="30sp"
-    app:backgroundTint="@color/black"
-    android:textColor="#fff"
-    android:layout_weight="1"
- android:layout_width="wrap_content"
- android:layout_height="wrap_content">
-</Button>
-<Button style="@style/Widget.Material3.Button.ElevatedButton"
-    android:id="@+id/b2"
-    android:text="2"
-    android:textSize="30sp"
-    app:backgroundTint="@color/black"
-    android:textColor="#fff"
-    android:layout_weight="1"
- android:layout_width="wrap_content"
- android:layout_height="wrap_content">
-</Button>
-<Button style="@style/Widget.Material3.Button.ElevatedButton"
-    android:id="@+id/b3"
-    android:text="3"
-    android:textSize="30sp"
-    app:backgroundTint="@color/black"
-    android:textColor="#fff"
-    android:layout_weight="1"
- android:layout_width="wrap_content"
- android:layout_height="wrap_content">
-</Button>
-<Button style="@style/Widget.Material3.Button.ElevatedButton"
-    android:id="@+id/bplus"
-    android:text="+"
-    android:textSize="25sp"
-    app:backgroundTint="@color/black"
-    android:textColor="#ffa500"
-    android:layout_weight="1"
- android:layout_width="wrap_content"
- android:layout_height="wrap_content">
-</Button>
-</LinearLayout>
-
-</LinearLayout>
-<LinearLayout
-    android:layout_weight="1"
-    android:orientation="horizontal"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
-<LinearLayout
-    android:orientation="horizontal"
-    android:weightSum="4"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
-<Button style="@style/Widget.Material3.Button.ElevatedButton"
-    android:id="@+id/bpi"
-    android:text="π"
-    android:textSize="30sp"
-    app:backgroundTint="#211830"
-    android:textColor="#fff"
-    android:layout_weight="1"
- android:layout_width="wrap_content"
- android:layout_height="wrap_content">
-</Button>
-<Button style="@style/Widget.Material3.Button.ElevatedButton"
-    android:id="@+id/b0"
-    android:text="0"
-    android:textSize="30sp"
-    app:backgroundTint="@color/black"
-    android:textColor="#fff"
-    android:layout_weight="1"
- android:layout_width="wrap_content"
- android:layout_height="wrap_content">
-</Button>
-<Button style="@style/Widget.Material3.Button.ElevatedButton"
-    android:id="@+id/bdot"
-    android:text="."
-    android:textSize="30sp"
-    app:backgroundTint="@color/black"
-    android:textColor="#fff"
-    android:layout_weight="1"
- android:layout_width="wrap_content"
- android:layout_height="wrap_content">
-</Button>
-<Button style="@style/Widget.Material3.Button.ElevatedButton"
-    android:id="@+id/bequal"
-    android:text="="
-    android:textSize="25sp"
-    app:backgroundTint="#444"
-    android:textColor="#ffa500"
-    android:layout_weight="1"
- android:layout_width="wrap_content"
- android:layout_height="wrap_content">
-</Button>
-</LinearLayout>
-
-</LinearLayout>
-    </LinearLayout>
-</LinearLayout>
-</LinearLayout>
+<RelativeLayout
+   xmlns:android="http://schemas.android.com/apk/res/android"
+   xmlns:tools="http://schemas.android.com/tools"
+   android:layout_width="match_parent"
+   android:layout_height="match_parent"
+   tools:context=".MainActivity">
+   <TextView
+      android:id="@+id/dateView"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:layout_marginLeft="150dp"
+      android:layout_marginTop="20dp"
+      android:text="Set the Date"
+      android:textColor="@android:color/background_dark"
+      android:textStyle="bold" />
+   <CalendarView
+      android:id="@+id/calender"
+      android:layout_centerInParent="true"
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content">
+   </CalendarView>
+</RelativeLayout>
